--- a/project5.html
+++ b/project5.html
@@ -20,7 +20,7 @@
                 <div class="product-box">
 
                     <div class="product-img">
-                        <img src="img/realme1.jpg"/>
+                        <img src="image/realme1.jpg"/>
                     </div>
                     
                     <div class="product-details">
@@ -35,7 +35,7 @@
                 <div class="product-box">
 
                     <div class="product-img">
-                        <img src="img/realme2.jpg"/>
+                        <img src="image/realme2.jpg"/>
                     </div>
                     <div class="product-details">
                         <a href="real.html" class="p-name">Realme 7 pro<br>(6GB RAM,128GBStorage)</a>
@@ -48,7 +48,7 @@
                 <div class="product-box">
 
                     <div class="product-img">
-                        <img src="img/realme3.jpg"/>
+                        <img src="image/realme3.jpg"/>
                     </div>
                     <div class="product-details">
                         <a href="real.html" class="p-name">Realme 5 Pro<br>(4GB RAM, 64GB Storage)</a>
@@ -61,7 +61,7 @@
                 <div class="product-box">
 
                     <div class="product-img">
-                        <img src="img/realme4.jpg"/>
+                        <img src="image/realme4.jpg"/>
                     </div>
                     <div class="product-details">
                         <a href="real.html" class="p-name">Realme 6i<br>(4GB RAM, 64GB Storage)</a>
@@ -74,7 +74,7 @@
                 <div class="product-box">
 
                     <div class="product-img">
-                        <img src="img/realme5.jpg"/>
+                        <img src="image/realme5.jpg"/>
                     </div>
                     <div class="product-details">
                         <a href="real.html" class="p-name">Realme 5i<br>(4GB RAM, 64GB Storage)</a>
@@ -87,7 +87,7 @@
                 <div class="product-box">
 
                     <div class="product-img">
-                        <img src="img/realme6.jpg"/>
+                        <img src="image/realme6.jpg"/>
                     </div>
                     <div class="product-details">
                         <a href="real.html" class="p-name">Realme 6<br>(4GB RAM, 64GB Storage)</a>
@@ -100,7 +100,7 @@
                 <div class="product-box">
 
                     <div class="product-img">
-                        <img src="img/realme7.jpg"/>
+                        <img src="image/realme7.jpg"/>
                     </div>
                     <div class="product-details">
                         <a href="real.html" class="p-name">Realme 7<br>(6GB RAM,64GB Storage)</a>
@@ -113,7 +113,7 @@
                 <div class="product-box">
 
                     <div class="product-img">
-                        <img src="img/realme8.jpg"/>
+                        <img src="image/realme8.jpg"/>
                     </div>
                     <div class="product-details">
                         <a href="real.html" class="p-name">Realme 7i<br>(4GB RAM,64GB Storage)</a>
@@ -126,7 +126,7 @@
                 <div class="product-box">
 
                     <div class="product-img">
-                        <img src="img/realme9.jpg"/>
+                        <img src="image/realme9.jpg"/>
                     </div>
                     <div class="product-details">
                         <a href="real.html" class="p-name">Realme narzo 20<br>(4GB RAM,64GB Storage)</a>
@@ -139,7 +139,7 @@
                 <div class="product-box">
 
                     <div class="product-img">
-                        <img src="img/realme10.jpg"/>
+                        <img src="image/realme10.jpg"/>
                     </div>
                     <div class="product-details">
                         <a href="real.html" class="p-name">Realme narzo 10<br>(4GB RAM,128GB Storage)</a>
@@ -152,7 +152,7 @@
                 <div class="product-box">
 
                     <div class="product-img">
-                        <img src="img/realme11.jpeg"/>
+                        <img src="image/realme11.jpeg"/>
                     </div>
                     <div class="product-details">
                         <a href="real.html" class="p-name">Realme X3<br>(6GB RAM,128GB Storage)</a>
@@ -165,7 +165,7 @@
                 <div class="product-box">
 
                     <div class="product-img">
-                        <img src="img/realme12.jpg"/>
+                        <img src="image/realme12.jpg"/>
                     </div>
                     <div class="product-details">
                         <a href="real.html" class="p-name">Realme X2 pro<br>(8GB RAM,128GB Storage)</a>
@@ -178,7 +178,7 @@
                 <div class="product-box">
 
                     <div class="product-img">
-                        <img src="img/realme13.jpg"/>
+                        <img src="image/realme13.jpg"/>
                     </div>
                     <div class="product-details">
                         <a href="real.html" class="p-name">Realme XT<br>(8GB RAM,128GB Storage)</a>
@@ -191,7 +191,7 @@
                 <div class="product-box">
 
                     <div class="product-img">
-                        <img src="img/realme14.jpg"/>
+                        <img src="image/realme14.jpg"/>
                     </div>
                     <div class="product-details">
                         <a href="real.html" class="p-name">Realme C15<br>(4GB RAM,64GB Storage)</a>
@@ -204,7 +204,7 @@
                 <div class="product-box">
 
                     <div class="product-img">
-                        <img src="img/realme15.jpeg"/>
+                        <img src="image/realme15.jpeg"/>
                     </div>
                     <div class="product-details">
                         <a href="real.html" class="p-name">Realme 5<br>(4GB RAM, 64GB Storage)</a>
@@ -216,7 +216,7 @@
                 <div class="product-box">
 
                     <div class="product-img">
-                        <img src="img/realme16.jpg"/>
+                        <img src="image/realme16.jpg"/>
                     </div>
                     <div class="product-details">
                         <a href="real.html" class="p-name">Realme 5s<br>(4GB RAM, 64GB Storage)</a>
@@ -229,7 +229,7 @@
                 <div class="product-box">
 
                     <div class="product-img">
-                        <img src="img/realme17.jpeg"/>
+                        <img src="image/realme17.jpeg"/>
                     </div>
                     <div class="product-details">
                         <a href="real.html" class="p-name">Realme X50 Pro<br>(8GB RAM, 128GB Storage)</a>
@@ -242,7 +242,7 @@
                 <div class="product-box">
 
                     <div class="product-img">
-                        <img src="img/realme18.jpg"/>
+                        <img src="image/realme18.jpg"/>
                     </div>
                     <div class="product-details">
                         <a href="real.html" class="p-name">Realme c11<br>(4GB RAM,64GB)</a>
