--- a/project4.html
+++ b/project4.html
@@ -20,7 +20,7 @@
                 <div class="product-box">
 
                     <div class="product-img">
-                        <img src="img/redmi1.jpg"/>
+                        <img src="image/redmi1.jpg"/>
                     </div>
                     
                     <div class="product-details">
@@ -35,7 +35,7 @@
                 <div class="product-box">
 
                     <div class="product-img">
-                        <img src="img/redmi2.jpg"/>
+                        <img src="image/redmi2.jpg"/>
                     </div>
                     <div class="product-details">
                         <a href="redmi.html" class="p-name">Redmi Note 9 Pro Max<br>(6GB RAM,128GB Storage)</a>
@@ -48,7 +48,7 @@
                 <div class="product-box">
 
                     <div class="product-img">
-                        <img src="img/redmi3.jpg"/>
+                        <img src="image/redmi3.jpg"/>
                     </div>
                     <div class="product-details">
                         <a href="redmi.html" class="p-name">Redmi Note 9<br>(4GB RAM, 64GB Storage)</a>
@@ -61,7 +61,7 @@
                 <div class="product-box">
 
                     <div class="product-img">
-                        <img src="img/redmi4.jpg"/>
+                        <img src="image/redmi4.jpg"/>
                     </div>
                     <div class="product-details">
                         <a href="redmi.html" class="p-name">Redmi 9 Prime<br>(4GB RAM,128GB Storage)</a>
@@ -74,7 +74,7 @@
                 <div class="product-box">
 
                     <div class="product-img">
-                        <img src="img/redmi5.jpg"/>
+                        <img src="image/redmi5.jpg"/>
                     </div>
                     <div class="product-details">
                         <a href="redmi.html" class="p-name">Redmi Note 8 pro<br>(6GB RAM, 128GB Storage)</a>
@@ -87,7 +87,7 @@
                 <div class="product-box">
 
                     <div class="product-img">
-                        <img src="img/redmi6.jpg"/>
+                        <img src="image/redmi6.jpg"/>
                     </div>
                     <div class="product-details">
                         <a href="redmi.html" class="p-name">Redmi Note 8<br>(4GB RAM, 64GB Storage)</a>
@@ -100,7 +100,7 @@
                 <div class="product-box">
 
                     <div class="product-img">
-                        <img src="img/redmi7.jpg"/>
+                        <img src="image/redmi7.jpg"/>
                     </div>
                     <div class="product-details">
                         <a href="redmi.html" class="p-name">Redmi K20 pro<br>(8GB RAM,128GB Storage)</a>
@@ -113,7 +113,7 @@
                 <div class="product-box">
 
                     <div class="product-img">
-                        <img src="img/redmi8.jpg"/>
+                        <img src="image/redmi8.jpg"/>
                     </div>
                     <div class="product-details">
                         <a href="redmi.html" class="p-name">Redmi K20<br>(6GB RAM, 128GB Storage)</a>
@@ -126,7 +126,7 @@
                 <div class="product-box">
 
                     <div class="product-img">
-                        <img src="img/redmi9.jpg"/>
+                        <img src="image/redmi9.jpg"/>
                     </div>
                     <div class="product-details">
                         <a href="redmi.html" class="p-name">Redmi 8<br>(4GB RAM,64GB)</a>
@@ -139,7 +139,7 @@
                 <div class="product-box">
 
                     <div class="product-img">
-                        <img src="img/redmi10.jpg"/>
+                        <img src="image/redmi10.jpg"/>
                     </div>
                     <div class="product-details">
                         <a href="redmi.html" class="p-name">Redmi 9<br>(4GB RAM,64GB Storage)</a>
@@ -152,7 +152,7 @@
                 <div class="product-box">
 
                     <div class="product-img">
-                        <img src="img/redmi11.jpg"/>
+                        <img src="image/redmi11.jpg"/>
                     </div>
                     <div class="product-details">
                         <a href="redmi.html" class="p-name">Redmi Note 7 Pro<br>(6GB RAM,128GB Storage)</a>
@@ -165,7 +165,7 @@
                 <div class="product-box">
 
                     <div class="product-img">
-                        <img src="img/redmi12.png"/>
+                        <img src="image/redmi12.png"/>
                     </div>
                     <div class="product-details">
                         <a href="redmi.html" class="p-name">Mi 10<br>(8GB RAM,256GB Storage)</a>
@@ -178,7 +178,7 @@
                 <div class="product-box">
 
                     <div class="product-img">
-                        <img src="img/redmi13.png"/>
+                        <img src="image/redmi13.png"/>
                     </div>
                     <div class="product-details">
                         <a href="redmi.html" class="p-name">Mi 10T<br>(8GB RAM,128GB Storage)</a>
@@ -191,7 +191,7 @@
                 <div class="product-box">
 
                     <div class="product-img">
-                        <img src="img/redmi14.png"/>
+                        <img src="image/redmi14.png"/>
                     </div>
                     <div class="product-details">
                         <a href="redmi.html" class="p-name">Mi 10T Pro(8GB RAM,128GB Storage)</a>
