--- a/project3.html
+++ b/project3.html
@@ -20,7 +20,7 @@
                 <div class="product-box">
 
                     <div class="product-img">
-                        <img src="img/vivo1.jpg"/>
+                        <img src="image/vivo1.jpg"/>
                     </div>
                     
                     <div class="product-details">
@@ -35,7 +35,7 @@
                 <div class="product-box">
 
                     <div class="product-img">
-                        <img src="img/vivo2.jpeg"/>
+                        <img src="image/vivo2.jpeg"/>
                     </div>
                     <div class="product-details">
                         <a href="vivo.html" class="p-name">Vivo V20 SE<br>(8GB RAM,128GB Storage)</a>
@@ -48,7 +48,7 @@
                 <div class="product-box">
 
                     <div class="product-img">
-                        <img src="img/vivo3.jpg"/>
+                        <img src="image/vivo3.jpg"/>
                     </div>
                     <div class="product-details">
                         <a href="vivo.html" class="p-name">Vivo V20 pro<br>(8GB RAM,128GB Storage)</a>
@@ -61,7 +61,7 @@
                 <div class="product-box">
 
                     <div class="product-img">
-                        <img src="img/vivo4.jpg"/>
+                        <img src="image/vivo4.jpg"/>
                     </div>
                     <div class="product-details">
                         <a href="vivo.html" class="p-name">Vivo V19(6GB RAM,128 GB Storage)</a>
@@ -74,7 +74,7 @@
                 <div class="product-box">
 
                     <div class="product-img">
-                        <img src="img/vivo5.jpg"/>
+                        <img src="image/vivo5.jpg"/>
                     </div>
                     <div class="product-details">
                         <a href="vivo.html" class="p-name">Vivo Z1X<br>(6GB RAM, 64GB Storage)</a>
@@ -100,7 +100,7 @@
                 <div class="product-box">
 
                     <div class="product-img">
-                        <img src="img/vivo6.jpg"/>
+                        <img src="image/vivo6.jpg"/>
                     </div>
                     <div class="product-details">
                         <a href="vivo.html" class="p-name">Vivo Z1 pro<br>(6GB RAM,128GB Storage)</a>
@@ -113,7 +113,7 @@
                 <div class="product-box">
 
                     <div class="product-img">
-                        <img src="img/vivo7.jpg"/>
+                        <img src="image/vivo7.jpg"/>
                     </div>
                     <div class="product-details">
                         <a href="vivo.html" class="p-name">Vivo V17 pro<br>(8GB RAM, 128GB Storage)</a>
@@ -126,7 +126,7 @@
                 <div class="product-box">
 
                     <div class="product-img">
-                        <img src="img/vivo8.jpg"/>
+                        <img src="image/vivo8.jpg"/>
                     </div>
                     <div class="product-details">
                         <a href="vivo.html" class="p-name">Vivo S1 pro<br>(8GB RAM, 128GB Storage)</a>
@@ -139,7 +139,7 @@
                 <div class="product-box">
 
                     <div class="product-img">
-                        <img src="img/vivo9.jpg"/>
+                        <img src="image/vivo9.jpg"/>
                     </div>
                     <div class="product-details">
                         <a href="vivo.html" class="p-name">Vivo S1<br>(6GB RAM, 64GB Storage)</a>
@@ -152,7 +152,7 @@
                 <div class="product-box">
 
                     <div class="product-img">
-                        <img src="img/vivo10.jpg"/>
+                        <img src="image/vivo10.jpg"/>
                     </div>
                     <div class="product-details">
                         <a href="vivo.html" class="p-name">Vivo X50 pro<br>(8GB RAM, 256GB Storage)</a>
@@ -165,7 +165,7 @@
                 <div class="product-box">
 
                     <div class="product-img">
-                        <img src="img/vivo11.jpg"/>
+                        <img src="image/vivo11.jpg"/>
                     </div>
                     <div class="product-details">
                         <a href="vivo.html" class="p-name">Vivo X50<br>(8GB RAM,128GB Storage)</a>
@@ -178,7 +178,7 @@
                 <div class="product-box">
 
                     <div class="product-img">
-                        <img src="img/vivo12.jpg"/>
+                        <img src="image/vivo12.jpg"/>
                     </div>
                     <div class="product-details">
                         <a href="vivo.html" class="p-name">Vivo U20(4GB RAM, 64GB Storage)</a>
@@ -191,7 +191,7 @@
                 <div class="product-box">
 
                     <div class="product-img">
-                        <img src="img/vivo13.jpg"/>
+                        <img src="image/vivo13.jpg"/>
                     </div>
                     <div class="product-details">
                         <a href="vivo.html" class="p-name">Vivo U10<br>(4GB RAM,64GB)</a>
