--- a/project1.html
+++ b/project1.html
@@ -20,7 +20,7 @@
                 <div class="product-box">
 
                     <div class="product-img">
-                        <img src="img/samsung1.jpg"/>
+                        <img src="image/samsung1.jpg"/>
                     </div>
                     
                     <div class="product-details">
@@ -35,7 +35,7 @@
                 <div class="product-box">
 
                     <div class="product-img">
-                        <img src="img/samsung2.jpg"/>
+                        <img src="image/samsung2.jpg"/>
                     </div>
                     <div class="product-details">
                         <a href="samsung.html" class="p-name">Samsung A71<br>(8GB RAM,128GB Storage)</a>
@@ -48,7 +48,7 @@
                 <div class="product-box">
 
                     <div class="product-img">
-                        <img src="img/samsung3.jpg"/>
+                        <img src="image/samsung3.jpg"/>
                     </div>
                     <div class="product-details">
                         <a href="samsung.html" class="p-name">Samsung M31s<br>(6GB RAM,128GB Storage)</a>
@@ -61,7 +61,7 @@
                 <div class="product-box">
 
                     <div class="product-img">
-                        <img src="img/samsung4.jpg"/>
+                        <img src="image/samsung4.jpg"/>
                     </div>
                     <div class="product-details">
                         <a href="samsung.html" class="p-name">Samsung Note 20 Ultra<br>(12GB RAM, 256GB Storage)</a>
@@ -74,7 +74,7 @@
                 <div class="product-box">
 
                     <div class="product-img">
-                        <img src="img/samsung5.jpg"/>
+                        <img src="image/samsung5.jpg"/>
                     </div>
                     <div class="product-details">
                         <a href="samsung.html" class="p-name">Samsung S20 Ultra<br>(8GB RAM, 128GB Storage)</a>
@@ -87,7 +87,7 @@
                 <div class="product-box">
 
                     <div class="product-img">
-                        <img src="img/samsung6.jpeg"/>
+                        <img src="image/samsung6.jpeg"/>
                     </div>
                     <div class="product-details">
                         <a href="samsung.html" class="p-name">Samsung f41<br>(6GB RAM, 64GB Storage)</a>
@@ -100,7 +100,7 @@
                 <div class="product-box">
 
                     <div class="product-img">
-                        <img src="img/samsung7.jpeg"/>
+                        <img src="image/samsung7.jpeg"/>
                     </div>
                     <div class="product-details">
                         <a href="samsung.html" class="p-name">Samsung S20 FE<br>(8GB RAM, 128GB Storage)</a>
@@ -113,7 +113,7 @@
                 <div class="product-box">
 
                     <div class="product-img">
-                        <img src="img/samsung8.jpeg"/>
+                        <img src="image/samsung8.jpeg"/>
                     </div>
                     <div class="product-details">
                         <a href="samsung.html" class="p-name">Samsung M11<br>(3GB RAM,32GB Storage)</a>
@@ -126,7 +126,7 @@
                 <div class="product-box">
 
                     <div class="product-img">
-                        <img src="img/samsung9.jpeg"/>
+                        <img src="image/samsung9.jpeg"/>
                     </div>
                     <div class="product-details">
                         <a href="samsung.html" class="p-name">Samsung M01<br>(1GB RAM,16GB Storage)</a>
@@ -139,7 +139,7 @@
                 <div class="product-box">
 
                     <div class="product-img">
-                        <img src="img/samsung10.jpg"/>
+                        <img src="image/samsung10.jpg"/>
                     </div>
                     <div class="product-details">
                         <a href="samsung.html" class="p-name">Samsung S20<br>(8GB RAM,128GB Storage)</a>
@@ -152,7 +152,7 @@
                 <div class="product-box">
 
                     <div class="product-img">
-                        <img src="img/samsung11.jpg"/>
+                        <img src="image/samsung11.jpg"/>
                     </div>
                     <div class="product-details">
                         <a href="samsung.html" class="p-name">Samsung Galaxy Note 10+<br>(12GB RAM, 256GB Storage)</a>
@@ -165,7 +165,7 @@
                 <div class="product-box">
 
                     <div class="product-img">
-                        <img src="img/samsung12.jpg"/>
+                        <img src="image/samsung12.jpg"/>
                     </div>
                     <div class="product-details">
                         <a href="samsung.html" class="p-name">Samsung Galaxy Note20<br>(8GB RAM,256GB)</a>
@@ -178,7 +178,7 @@
                 <div class="product-box">
 
                     <div class="product-img">
-                        <img src="img/Samsung14.jpg"/>
+                        <img src="image/Samsung14.jpg"/>
                     </div>
                     <div class="product-details">
                         <a href="samsung.html" class="p-name">Samsung Note10<br>(12GB RAM,256GB)</a>
@@ -191,7 +191,7 @@
                 <div class="product-box">
 
                     <div class="product-img">
-                        <img src="img/samsung15.jpg"/>
+                        <img src="image/samsung15.jpg"/>
                     </div>
                     <div class="product-details">
                         <a href="samsung.html" class="p-name">Samsung Galaxy Z Fold2 5G<br>(12GB RAM,256GB)</a>
