--- a/real.html
+++ b/real.html
@@ -139,13 +139,13 @@
                 <div class="col-md-5">
                     <div class="slideshow-container">
                         <div class="mySlides fade">
-                            <img src="img/realme6pro_12.jpg" style="width:100%">
+                            <img src="image/realme6pro_12.jpg" style="width:100%">
                         </div>
                         <div class="mySlides fade">
-                            <img src="img/realme6pro_1.jpg" style="width:100%">
+                            <img src="image/realme6pro_1.jpg" style="width:100%">
                         </div>
                         <div class="mySlides fade">
-                            <img src="img/realme6pro_!1.jpg" style="width:100%">
+                            <img src="image/realme6pro_!1.jpg" style="width:100%">
                         </div>
                         <br>
                         <div style="text-align:center">
