--- a/project1.html
+++ b/project1.html
@@ -178,7 +178,7 @@
                 <div class="product-box">
 
                     <div class="product-img">
-                        <img src="image/Samsung14.jpg"/>
+                        <img src="image/samsung14.jpg"/>
                     </div>
                     <div class="product-details">
                         <a href="samsung.html" class="p-name">Samsung Note10<br>(12GB RAM,256GB)</a>
