--- a/samsung.html
+++ b/samsung.html
@@ -139,13 +139,13 @@
                 <div class="col-md-5">
                     <div class="slideshow-container">
                         <div class="mySlides fade">
-                            <img src="img/samsungm51_1.jpg" style="width:100%">
+                            <img src="image/samsungm51_1.jpg" style="width:100%">
                         </div>
                         <div class="mySlides fade">
-                            <img src="img/samsungm51_2.jpg" style="width:100%">
+                            <img src="image/samsungm51_2.jpg" style="width:100%">
                         </div>
                         <div class="mySlides fade">
-                            <img src="img/samsungm51_3.jpg" style="width:100%">
+                            <img src="image/samsungm51_3.jpg" style="width:100%">
                         </div>
                         <br>
                         <div style="text-align:center">
