--- a/vivo.html
+++ b/vivo.html
@@ -139,10 +139,10 @@
                 <div class="col-md-5">
                     <div class="slideshow-container">
                         <div class="mySlides fade">
-                            <img src="img/vivov20_1.jpg" style="width:100%">
+                            <img src="image/vivov20_1.jpg" style="width:100%">
                         </div>
                         <div class="mySlides fade">
-                            <img src="img/vivov20_2.jpg" style="width:100%">
+                            <img src="image/vivov20_2.jpg" style="width:100%">
                         </div>
                         <br>
                         <div style="text-align:center">
