--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <style>
         body
         {
-            background-color:orangered;
+            background-color:whitesmoke;
         }
         .navbar 
           {
