--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
            margin-top: 10px;
            padding:20px;
            border-radius: 8px;
-           background-color: black;
+           background-color: rgb(184, 149, 149);
            color:white;
            font-weight:800;
 
@@ -87,7 +87,7 @@
            margin-top: 15px;
            padding:20px;
            border-radius: 8px;
-           background-color: black;
+           background-color: rgb(184, 149, 149);
            color:white;
            font-weight:1000;
            font-family: Comic Sans MS;
@@ -97,7 +97,7 @@
             margin-top: 15px;
            padding:20px;
            border-radius: 8px;
-           background-color:black;
+           background-color: rgb(184, 149, 149);
            color:white;
            font-weight:1000;
            font-family: Comic Sans MS;
