--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         .navbar 
           {
             margin-bottom: 0;
+            background-color: grey;
             border-radius: 0;
         }
         .row.content {height: 450px}
