--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
            margin-top: 10px;
            padding:20px;
            border-radius: 8px;
-           background-color: grey;
+           background-color: black;
            color:white;
            font-weight:800;
 
@@ -88,7 +88,7 @@
            margin-top: 15px;
            padding:20px;
            border-radius: 8px;
-           background-color: grey;
+           background-color: black;
            color:white;
            font-weight:1000;
            font-family: Comic Sans MS;
@@ -98,7 +98,7 @@
             margin-top: 15px;
            padding:20px;
            border-radius: 8px;
-           background-color: grey;
+           background-color: black;
            color:white;
            font-weight:1000;
            font-family: Comic Sans MS;
