--- a/index.html
+++ b/index.html
@@ -55,20 +55,20 @@
      {
         0%
        {
-          color:red;
+          color:lightcoral;
 
        }
        25%
       {
-         color: chartreuse;
+         color: lightgoldenrodyellow;
        }
        50%
       {
-         color: blue;
+         color: lightpink;
       }
        100%
       {
-          color: red;
+          color: lightsteelblue;
        }
     }
 
