--- a/index.html
+++ b/index.html
@@ -2,14 +2,15 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+        <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
         <title>Mobiles</title>
         <style>
         body
         {
-            background-color:whitesmoke;
+            background-color:white;
         }
         .navbar 
           {
@@ -33,17 +34,18 @@
        {
            margin: 20px;
            border-radius: 8px;
+           background-color:black;
        }
        #align
        {
-           background-image: url("deco3.gif");
-           margin-top: 10px;
+           margin-top: 5px;
            padding:20px;
            text-align: center;
            color:white;
            border-radius: 8px;
            animation: animate 3s infinite;
            font-family: Comic Sans MS;
+           font-size: 24px;
        }
        #anim
        {
@@ -55,39 +57,28 @@
      {
         0%
        {
-          color:lightcoral;
+          color:red;
 
        }
        25%
       {
-         color: lightgoldenrodyellow;
+         color: chartreuse;
        }
        50%
       {
-         color: lightpink;
+         color: blue;
       }
        100%
       {
-          color: lightsteelblue;
+          color: red;
        }
     }
-
-       #align1
-       {
-           margin-top: 10px;
-           padding:20px;
-           border-radius: 8px;
-           background-color: black;
-           color:white;
-           font-weight:800;
-
-       }
        #align2
        {
            margin-top: 15px;
            padding:20px;
            border-radius: 8px;
-           background-color: black;
+           background-color:black;
            color:white;
            font-weight:1000;
            font-family: Comic Sans MS;
@@ -97,54 +88,183 @@
             margin-top: 15px;
            padding:20px;
            border-radius: 8px;
-           background-color: black;
+           background-color:black;
            color:white;
            font-weight:1000;
            font-family: Comic Sans MS;
        }
        .responsive {
-            width: 100%;
-            max-width: 1600px;
+            width: 1600px;
            height: auto;
         } 
+        #val
+        {
+          margin-top: 10px;
+          padding: 10px;
+          border-radius: 8px;
+        }
+        .carousel-item
+        {
+          max-height: 430px;
+        }
+        @media only screen and (max-width: 600px) {
+          #align{
+            font-size: 18px;
+        }
+        #align2{
+          font-size: 12px;
+        }
+        #align3{
+          font-size: 12px;
+        }
+      }
+      .card
+      {
+        margin: 30px 10px;
+        background-color: #F4F5FF;
+      }
+      .col-sm-6
+      {
+        padding:10px;
+      }
+      .card-img-top
+      {
+        max-height: 180px;
+      }
       </style>
     </head>
     <body>
-        <nav class="navbar navbar-inverse" id="navi">
-            <div class="container-fluid">
-              <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-                  <span class="icon-bar"></span>
-                  <span class="icon-bar"></span>
-                  <span class="icon-bar"></span>                        
-                </button>
-                <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-shop-window" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-                    <path fill-rule="evenodd" d="M2.97 1.35A1 1 0 0 1 3.73 1h8.54a1 1 0 0 1 .76.35l2.609 3.044A1.5 1.5 0 0 1 16 5.37v.255a2.375 2.375 0 0 1-4.25 1.458A2.371 2.371 0 0 1 9.875 8 2.37 2.37 0 0 1 8 7.083 2.37 2.37 0 0 1 6.125 8a2.37 2.37 0 0 1-1.875-.917A2.375 2.375 0 0 1 0 5.625V5.37a1.5 1.5 0 0 1 .361-.976l2.61-3.045zm1.78 4.275a1.375 1.375 0 0 0 2.75 0 .5.5 0 0 1 1 0 1.375 1.375 0 0 0 2.75 0 .5.5 0 0 1 1 0 1.375 1.375 0 1 0 2.75 0V5.37a.5.5 0 0 0-.12-.325L12.27 2H3.73L1.12 5.045A.5.5 0 0 0 1 5.37v.255a1.375 1.375 0 0 0 2.75 0 .5.5 0 0 1 1 0zM1.5 8.5A.5.5 0 0 1 2 9v6h12V9a.5.5 0 0 1 1 0v6h.5a.5.5 0 0 1 0 1H.5a.5.5 0 0 1 0-1H1V9a.5.5 0 0 1 .5-.5zm2 .5a.5.5 0 0 1 .5.5V13h8V9.5a.5.5 0 0 1 1 0V13a1 1 0 0 1-1 1H4a1 1 0 0 1-1-1V9.5a.5.5 0 0 1 .5-.5z"/>
-                </svg>
-                <a class="navbar-brand" href="#" id="anim">Shopping Corner</a>
-              </div>
-              <div class="collapse navbar-collapse" id="myNavbar">
-                <ul class="nav navbar-nav navbar-right">
-                    <li class="active"><a href="project5.html">Realme</a></li>
-                    <li><a href="project4.html">Redmi</a></li>
-                    <li><a href="project1.html">Samsung</a></li>
-                    <li><a href="project3.html">Vivo</a></li>
-                    <li><a href="project.html">Oneplus</a></li>
-                    <li><a href="project2.html">Poco</a></li>
-                </ul>
-              </div>
-
+      <div class="container-fluid">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark" id="val">
+            <a class="navbar-brand" href="#" id="align">Shopping Corner</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse flex-row-reverse" id="navbarNavDropdown">
+              <ul class="navbar-nav">
+                <li class="nav-item active">
+                  <a class="nav-link" href="project5.html">Realme<span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="project4.html">Redmi</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="project1.html">Samsung</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="project2.html">Poco</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="project3.html">Vivo</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="project.html">Oneplus</a>
+                  </li>
+              </ul>
             </div>
-        </nav>
+          </nav>
+        </div>
+        <br>
+        <br>
         <div class="container-fluid">
-          <div id="align">
-              <h1>SHOPPING CORNER</h1>
-              <h1>HAPPY NEW YEAR 2021</h1>
+          <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+            <ol class="carousel-indicators">
+              <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+              <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+              <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+            </ol>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img class="d-block w-100" src="m51.jpg" alt="First slide">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100" src="r7pro.png" alt="Second slide">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100" src="onepluss.jpg" alt="Third slide">
+              </div>
+            </div>
+            <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="sr-only">Next</span>
+            </a>
           </div>
         </div>
+        <br>
+        <br>
         <div class="container-fluid">
-        <div id="align1">
-            <img src="vivov204.jpg" class="responsive">
+          <div class="row">
+            <div class="col-lg-4 col-sm-6">
+              <div class="card" style="width: 85%;">
+                  <div class="card-body">
+                      <img class="card-img-top" src="img/samsung14.jpg" alt="Card image cap">
+                       <br>
+                       <br>
+                    <center><a href="#" class="btn btn-primary">WRITING</a></center>
+                    <h5 class="card-title display-5">Mentoring program in the workplace</h5>
+                  </div>
+              </div>
+            </div>
+              <div class="col-lg-4 col-sm-6">
+                  <div class="card" style="width: 85%;">
+                      <div class="card-body">
+                          <img class="card-img-top" src="img/samsung12.jpg" alt="Card image cap">
+                           <br>
+                           <br>
+                           <center><a href="#" class="btn btn-primary">WRITING</a></center>
+                        <h5 class="card-title display-5">Create Mentorship program</h5>
+                      </div>
+                  </div>
+             </div>
+             <div class="col-lg-4 col-sm-6">
+              <div class="card" style="width: 85%;">
+                  <div class="card-body">
+                      <img class="card-img-top" src="img/realme1.jpg" alt="Card image cap">
+                       <br>
+                       <br>
+                    <center><a href="#" class="btn btn-primary">WRITING</a></center>
+                    <h5 class="card-title display-5">Mentoring program in the workplace</h5>
+                  </div>
+              </div>
+            </div>
+              <div class="col-lg-4 col-sm-6">
+                  <div class="card" style="width: 85%;">
+                      <div class="card-body">
+                          <img class="card-img-top" src="oneplus8pro1.jpg" alt="Card image cap">
+                           <br>
+                           <br>
+                           <center><a href="#" class="btn btn-primary">WRITING</a></center>
+                        <h5 class="card-title display-5">Create Mentorship program</h5>
+                      </div>
+                  </div>
+             </div>
+             <div class="col-lg-4 col-sm-6">
+              <div class="card" style="width: 85%;">
+                  <div class="card-body">
+                      <img class="card-img-top" src="poco2.jpg" alt="Card image cap">
+                       <br>
+                       <br>
+                       <center><a href="#" class="btn btn-primary">WRITING</a></center>
+                    <h5 class="card-title display-5">Value of Mentorship program</h5>
+                  </div>
+              </div>
+          </div>
+              <div class="col-lg-4 col-sm-6">
+                <div class="card" style="width: 85%;">
+                    <div class="card-body">
+                        <img class="card-img-top" src="oneplus8t1.png" alt="Card image cap">
+                         <br>
+                         <br>
+                      <center><a href="#" class="btn btn-primary">WRITING</a></center>
+                      <h5 class="card-title display-6">Mentoring new employees</h5>
+                    </div>
+                </div>
+              </div>
+        </div>
         </div>
         <div class="container-fluid">
          <div class="row justify-content-start">
