--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
             </ol>
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img class="d-block w-100" src="m51.jpg" alt="First slide">
+                <img class="d-block w-100" src="m511.jpg" alt="First slide">
               </div>
               <div class="carousel-item">
                 <img class="d-block w-100" src="r7pro.png" alt="Second slide">
@@ -204,8 +204,8 @@
                       <img class="card-img-top" src="img/samsung14.jpg" alt="Card image cap">
                        <br>
                        <br>
-                    <center><a href="#" class="btn btn-primary">WRITING</a></center>
-                    <h5 class="card-title display-5">Mentoring program in the workplace</h5>
+                    <center><a href="#" class="btn btn-primary">Buy</a></center>
+                    <h5 class="card-title display-5">Starting from 55000</h5>
                   </div>
               </div>
             </div>
@@ -215,8 +215,8 @@
                           <img class="card-img-top" src="img/samsung12.jpg" alt="Card image cap">
                            <br>
                            <br>
-                           <center><a href="#" class="btn btn-primary">WRITING</a></center>
-                        <h5 class="card-title display-5">Create Mentorship program</h5>
+                           <center><a href="#" class="btn btn-primary">Buy</a></center>
+                        <h5 class="card-title display-5">Starting from 5999</h5>
                       </div>
                   </div>
              </div>
@@ -226,8 +226,8 @@
                       <img class="card-img-top" src="img/realme1.jpg" alt="Card image cap">
                        <br>
                        <br>
-                    <center><a href="#" class="btn btn-primary">WRITING</a></center>
-                    <h5 class="card-title display-5">Mentoring program in the workplace</h5>
+                    <center><a href="#" class="btn btn-primary">Buy</a></center>
+                    <h5 class="card-title display-5">Starting from 15000</h5>
                   </div>
               </div>
             </div>
@@ -237,8 +237,8 @@
                           <img class="card-img-top" src="oneplus8pro1.jpg" alt="Card image cap">
                            <br>
                            <br>
-                           <center><a href="#" class="btn btn-primary">WRITING</a></center>
-                        <h5 class="card-title display-5">Create Mentorship program</h5>
+                           <center><a href="#" class="btn btn-primary">Buy</a></center>
+                        <h5 class="card-title display-5">Starting from 35000</h5>
                       </div>
                   </div>
              </div>
@@ -248,8 +248,8 @@
                       <img class="card-img-top" src="poco2.jpg" alt="Card image cap">
                        <br>
                        <br>
-                       <center><a href="#" class="btn btn-primary">WRITING</a></center>
-                    <h5 class="card-title display-5">Value of Mentorship program</h5>
+                       <center><a href="#" class="btn btn-primary">Buy</a></center>
+                    <h5 class="card-title display-5">Starting from 7800</h5>
                   </div>
               </div>
           </div>
@@ -259,8 +259,8 @@
                         <img class="card-img-top" src="oneplus8t1.png" alt="Card image cap">
                          <br>
                          <br>
-                      <center><a href="#" class="btn btn-primary">WRITING</a></center>
-                      <h5 class="card-title display-6">Mentoring new employees</h5>
+                      <center><a href="#" class="btn btn-primary">Buy</a></center>
+                      <h5 class="card-title display-6">Starting from 45000</h5>
                     </div>
                 </div>
               </div>
