--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
       }
       .card-img-top
       {
-        max-height: 250px;
+        max-height: 350px;
       }
       </style>
     </head>
@@ -201,7 +201,7 @@
             <div class="col-lg-4 col-sm-6">
               <div class="card" style="width: 85%;">
                   <div class="card-body">
-                      <img class="card-img-top" src="img/samsung14.jpg" alt="Card image cap">
+                      <img class="card-img-top" src="image/samsung14.jpg" alt="Card image cap">
                        <br>
                        <br>
                     <center><a href="#" class="btn btn-primary">Buy</a></center>
@@ -212,7 +212,7 @@
               <div class="col-lg-4 col-sm-6">
                   <div class="card" style="width: 85%;">
                       <div class="card-body">
-                          <img class="card-img-top" src="img/samsung12.jpg" alt="Card image cap">
+                          <img class="card-img-top" src="image/samsung12.jpg" alt="Card image cap">
                            <br>
                            <br>
                            <center><a href="#" class="btn btn-primary">Buy</a></center>
@@ -223,7 +223,7 @@
              <div class="col-lg-4 col-sm-6">
               <div class="card" style="width: 85%;">
                   <div class="card-body">
-                      <img class="card-img-top" src="img/realme1.jpg" alt="Card image cap">
+                      <img class="card-img-top" src="image/realme1.jpg" alt="Card image cap">
                        <br>
                        <br>
                     <center><a href="#" class="btn btn-primary">Buy</a></center>
