--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
             <div class="col-lg-4 col-sm-6">
               <div class="card" style="width: 85%;">
                   <div class="card-body">
-                      <img class="card-img-top" src="image/samsung14.jpg" alt="Card image cap">
+                      <img class="card-img-top" src="pocox2_1.jpg" alt="Card image cap">
                        <br>
                        <br>
                     <center><a href="#" class="btn btn-primary">Buy</a></center>
@@ -212,7 +212,7 @@
               <div class="col-lg-4 col-sm-6">
                   <div class="card" style="width: 85%;">
                       <div class="card-body">
-                          <img class="card-img-top" src="image/samsung12.jpg" alt="Card image cap">
+                          <img class="card-img-top" src="oneplus7t1.png" alt="Card image cap">
                            <br>
                            <br>
                            <center><a href="#" class="btn btn-primary">Buy</a></center>
@@ -223,7 +223,7 @@
              <div class="col-lg-4 col-sm-6">
               <div class="card" style="width: 85%;">
                   <div class="card-body">
-                      <img class="card-img-top" src="image/realme1.jpg" alt="Card image cap">
+                      <img class="card-img-top" src="oneplusnord2.png" alt="Card image cap">
                        <br>
                        <br>
                     <center><a href="#" class="btn btn-primary">Buy</a></center>
