--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
              <div class="col-lg-4 col-sm-6">
               <div class="card" style="width: 85%;">
                   <div class="card-body">
-                      <img class="card-img-top" src="poco6.jpg" alt="Card image cap">
+                      <img class="card-img-top" src="oneplus8pro1.jpg" alt="Card image cap">
                        <br>
                        <br>
                        <center><a href="#" class="btn btn-primary">Buy</a></center>
